made progress on mobile layout, top content complete, need to fix navigation bug and the rest of the page

--- a/css/index.css
+++ b/css/index.css
@@ -177,6 +177,13 @@ p {
   margin-bottom: 3.6rem;
   z-index: 50;
 }
+@media (max-width: 500px) {
+  .header {
+    height: 500px;
+    background-size: 100% 80%;
+    margin-bottom: -54px;
+  }
+}
 .header h1 {
   position: relative;
   top: 326px;
@@ -184,6 +191,12 @@ p {
   color: white;
   line-height: 7.5rem;
   font-weight: bold;
+}
+@media (max-width: 500px) {
+  .header h1 {
+    top: 130px;
+    left: 32px;
+  }
 }
 .header .opacity {
   opacity: 0.2;
@@ -303,15 +316,29 @@ footer .footer-form p {
   max-width: 100%;
   width: 792px;
 }
+@media (max-width: 500px) {
+  .top-container {
+    margin: 0 2%;
+    width: 100%;
+    flex-direction: column-reverse;
+  }
+}
 .top-container .top-content {
   width: 46%;
   display: flex;
   flex-direction: column;
   margin-bottom: 3rem;
 }
+@media (max-width: 500px) {
+  .top-container .top-content {
+    width: 95%;
+    text-align: center;
+  }
+}
 .top-container .top-content h2 {
   margin-bottom: 24px;
   margin-top: 12px;
+  text-align: center;
 }
 .top-container .top-content .button {
   width: 32%;
@@ -323,8 +350,30 @@ footer .footer-form p {
   font-size: 1.4rem;
   cursor: pointer;
 }
+@media (max-width: 500px) {
+  .top-container .top-content .button {
+    width: 95%;
+  }
+}
 .top-container .top-pic {
   width: 47%;
+}
+@media (max-width: 500px) {
+  .top-container .top-pic img {
+    width: 95%;
+  }
+}
+@media (max-width: 500px) {
+  .top-container .top-pic {
+    width: 100%;
+    height: auto;
+    text-align: center;
+  }
+}
+@media (max-width: 500px) {
+  .top-container.reverse {
+    flex-direction: column;
+  }
 }
 .main-container {
   margin: 0 auto 5rem;
