--- a/less/home-page.less
+++ b/less/home-page.less
@@ -7,15 +7,27 @@
   max-width: 100%;
   width: 792px;
 
+    @media @phone {
+      margin: 0 2%;
+      width: 100%;
+      flex-direction: column-reverse;
+    }
+
   .top-content {
     width: 46%;
     display: flex;
     flex-direction: column;
     margin-bottom: 3rem;
 
+    @media @phone {
+      width: 95%;
+      text-align: center;
+    }
+
     h2 {
       margin-bottom: 24px;
       margin-top: 12px;
+      text-align: center;
     }
 
     .button {
@@ -27,14 +39,42 @@
       text-align: center;
       font-size: 1.4rem;
       cursor: pointer;
+
+      @media @phone {
+        width: 95%;
+      }
     }
   }
 
+
+
   .top-pic {
     width: 47%;
+
+    img {
+      @media @phone {
+        width: 95%;
+      }
+    }
+
+    @media @phone {
+      width: 100%;
+      height: auto;
+      text-align: center;
+    }
   }
 
 }
+
+  @media @phone {
+
+    .top-container.reverse{
+      flex-direction: column;
+    }
+
+  }
+
+
 
 .main-container {
   margin: 0 auto 5rem;
