--- a/less/navigation.less
+++ b/less/navigation.less
@@ -7,6 +7,12 @@
   margin-bottom: 3.6rem;
   z-index: 50;
 
+  @media @phone {
+    height: 500px;
+    background-size: 100% 80%;
+    margin-bottom: -54px;
+  }
+
   h1 {
     position: relative;
     top: 326px;
@@ -14,6 +20,11 @@
     color: white;
     line-height: 7.5rem;
     font-weight: bold;
+
+    @media @phone {
+      top: 130px;
+      left: 32px;
+    }
   }
 
   .opacity {
