--- a/less/variables.less
+++ b/less/variables.less
@@ -7,3 +7,7 @@
 @footer-bg: #828282;
 @nav-bg: #9AA4AD;
 @nav-hover: #4E4545;
+
+// Mobile var
+
+@phone: ~"(max-width: 500px)";
